...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="kxy-0v-ggB" id="JHv-NM-YuE"/>
                            <outlet property="delegate" destination="kxy-0v-ggB" id="60D-IN-IAt"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="My Places" largeTitleDisplayMode="never" id="NaS-gc-jY1">
                        <barButtonItem key="leftBarButtonItem" title="Sorted" id="QIW-fY-dVa">
                            <connections>
                                <segue destination="kWL-wB-zc3" kind="presentation" modalTransitionStyle="crossDissolve" id="djE-ym-0iV"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Wkt-TV-apy">
...
                        </sections>
                        <connections>
                            <outlet property="dataSource" destination="iGW-Da-jXb" id="PQR-Bj-dan"/>
                            <outlet property="delegate" destination="iGW-Da-jXb" id="QOX-c4-YKm"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="New Place" largeTitleDisplayMode="always" id="wuX-t6-ZZR">
                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="QxD-Or-Ppr">
                            <connections>
                                <action selector="cancelAction:" destination="iGW-Da-jXb" id="wcj-jm-Nhc"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="Save" id="Opd-4F-7Qm">
                            <connections>
                                <segue destination="hWl-6i-mHk" kind="unwind" unwindAction="unwindNewPlaceSegue:" id="XhY-J6-EWm"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
                        <outlet property="placeImage" destination="nTh-jk-Bbm" id="JRX-rI-9jl"/>
                        <outlet property="placeLocation" destination="7Ui-X4-fk2" id="LDx-RQ-OtV"/>
                        <outlet property="placeName" destination="Oh6-0e-u9L" id="1nI-Ar-nKn"/>
                        <outlet property="placeType" destination="mzt-sS-Y7V" id="ECx-FU-4bN"/>
                        <outlet property="ratingControl" destination="7nr-eF-2Ek" id="rkw-Zz-pd5"/>
                        <outlet property="saveButton" destination="Opd-4F-7Qm" id="Uz9-1k-ZnK"/>
                    </connections>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="Q36-c9-nFo" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
...
