...
        super.viewDidLoad()

        places = StorageManager.fetchObjects()

        setupSearchController()

        tableView.accessibilityIdentifier = "placesTable"
        navigationItem.rightBarButtonItem?.accessibilityIdentifier = "addPlace"

        NotificationCenter.default.addObserver(self, selector: #selector(sortingSelection(_ :)), name: Notification.Name("SortSelectionDidChanged"), object: nil)
        NotificationCenter.default.addObserver(self, selector: #selector(reversedSorting(_ :)), name: Notification.Name("ReversedSortingDidChanged"), object: nil)
    }

...
